# tomo-center

./: .gitignore  README.md  pyproject.toml
src/tomo_center/: __init__.py  cli.py  io_tiff.py  logging.py  train.py
src/tomo_center/ai/: __init__.py  inference.py
src/tomo_center_ai/: __init__.py  cli.py
src/tomo_center_ai/ai/: __init__.py  inference.py
