[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomo-center"
version = "0.2.0"
description = "AI rotation-axis center picker (find) and fine-tuner (train) for pre-reconstructed TIFF slices (vendored from tomocupy)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Francesco De Carlo" }]
dependencies = [
    "numpy<2",
    "pillow",
    "tifffile",
    "torch",
    "einops",
]

[project.optional-dependencies]
plot = ["matplotlib"]

[project.scripts]
tomo-center = "tomo_center.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tomo_center = ["py.typed"]
